Revise project report with detailed system overview
Updated the project report to include detailed descriptions of the system architecture, functionalities, and technological stack. Expanded sections on project evolution, objectives, and business rules.

--- a/doc/c1.md
+++ b/doc/c1.md
@@ -1,19 +1,239 @@
-# C1 : My work assignment title
+# Capítulo 1 – Enquadramento e Apresentação do Projeto
 
-## Description
-_Add here an extended decription of the assignment_
+## 1.1 Enquadramento
 
+O setor do aluguer de automóveis envolve uma forte componente operacional, que inclui a gestão diária de clientes, veículos, reservas, categorias, manutenção e colaboradores responsáveis pelos atendimentos. Sem um sistema estruturado, esta informação tende a dispersar-se entre processos manuais, dificultando a rastreabilidade das operações, o controlo da frota, o histórico de intervenções e a consistência dos dados.
 
-## Group _xx_
+Neste contexto, o presente projeto — desenvolvido no âmbito da unidade curricular **Desenvolvimento Web I** — consiste no desenvolvimento de uma **solução completa** para empresas de **rent-a-car**, composta por três componentes fundamentais:
 
-_Don't forget to add the group elements_
+1. **API REST Car4Me** — Backend desenvolvido em **LoopBack 4** (Node.js + TypeScript)
+2. **Backoffice Administrativo** — Interface web desenvolvida em **React Admin**
+3. **Infraestrutura Containerizada** — Sistema completo dockerizado com **Docker Compose**
 
-* Marco Amaro Oliveira [@MarcoOliveira](https://github.com/marcoamarooliveira)
-* Other team members
+Esta solução segue o estilo arquitetural **REST**, utiliza **MySQL** como base de dados relacional e encontra-se totalmente documentada através de **OpenAPI 3.0**, permitindo a interação através de Swagger UI no endpoint `/explorer`.
 
+## 1.2 Descrição Sumária do Sistema
 
+O sistema **Car4Me** implementa um conjunto completo de funcionalidades necessárias ao funcionamento digital de uma empresa de aluguer de automóveis, organizado em três camadas:
+
+### 1.2.1 Camada de Dados (MySQL)
+- Base de dados relacional com **7 tabelas** interligadas
+- Implementação de **triggers** para automatização de processos
+- **Foreign keys** com políticas CASCADE para manutenção de integridade
+- Relação **Many-to-Many** entre clientes e veículos favoritos
+
+### 1.2.2 Camada de Backend (LoopBack 4 API)
+- **Gestão de clientes** com validação de NIF
+- **Gestão da frota de veículos** com suporte a 30 marcas
+- **Gestão de categorias** de veículos (Elétrico, Diesel, Gasolina, Híbrido, GPL)
+- **Gestão de reservas** com controlo de estados (ativa, concluída, cancelada)
+- **Gestão de funcionários** responsáveis pelos atendimentos
+- **Registos de manutenções** com histórico completo
+- **Sistema de favoritos** (relação N:N entre clientes e veículos)
+- **Filtragem avançada** por parâmetros HTTP em múltiplas entidades
+
+### 1.2.3 Camada de Apresentação (React Admin)
+- Interface administrativa moderna e responsiva
+- **CRUD completo** para todas as entidades
+- **Dashboard** com estatísticas em tempo real
+- **Validações automáticas** de formulários (NIF, email, telefone)
+- **Visualização de relações** bidirecionais
+- **Internacionalização completa** em Português de Portugal
+- Suporte a **filtragem, ordenação e paginação**
+
+### 1.2.4 Infraestrutura (Docker)
+- **3 containers isolados**: MySQL, API, Frontend
+- **Docker Compose** para orquestração
+- **Volumes persistentes** para dados
+- **Healthchecks** automáticos
+- **Deploy simplificado** com um único comando
+
+A solução foi desenvolvida de forma modular, garantindo que cada entidade possui operações **CRUD** e comportamentos específicos alinhados com regras de negócio reais de uma empresa de aluguer de automóveis.
+
+## 1.3 Evolução do Projeto
+
+O presente projeto representa a **evolução e expansão** de um trabalho anterior, onde foi desenvolvida inicialmente apenas a API REST. Nesta fase, o sistema foi:
+
+- **Migrado** de Express.js para **LoopBack 4**, uma framework mais robusta e adequada para APIs enterprise
+- **Expandido** com uma interface administrativa completa em React Admin
+- **Containerizado** com Docker, garantindo portabilidade e facilidade de deploy
+- **Refinado** com validações mais rigorosas e tratamento de erros
+- **Documentado** de forma mais abrangente, incluindo toda a stack tecnológica
+
+## 1.4 Objetivo Geral
+
+O objetivo geral deste projeto é desenvolver uma **solução completa, robusta e escalável** para gestão de empresas de rent-a-car, abrangendo desde a camada de dados até à interface de utilizador, garantindo:
+
+- **Integridade dos dados** através de validações em múltiplas camadas
+- **Consistência operacional** com triggers e constraints na base de dados
+- **Usabilidade** através de interface administrativa intuitiva
+- **Portabilidade** via containerização Docker
+- **Facilidade de manutenção** com código modular e bem documentado
+- **Escalabilidade** para suportar crescimento da operação
+
+## 1.5 Objetivos Específicos
+
+### 1.5.1 Backend (API)
+- Implementar uma API REST em **LoopBack 4** (Node.js + TypeScript)
+- Criar endpoints CRUD para clientes, veículos, categorias, reservas, funcionários e manutenções
+- Implementar **controller dedicado** para relação N:N (clientes_favoritos)
+- Incluir mecanismos de filtragem através de parâmetros HTTP
+- Documentar automaticamente através de **OpenAPI 3.0**
+- Implementar validações robustas e tratamento de erros
+
+### 1.5.2 Frontend (Backoffice)
+- Desenvolver interface administrativa em **React Admin**
+- Implementar CRUD completo para todas as entidades
+- Criar **Dashboard** com estatísticas em tempo real
+- Traduzir completamente para **Português de Portugal**
+- Implementar validações de formulários (NIF 9 dígitos, emails, telefones)
+- Criar visualizações bidirecionais de relações (favoritos, históricos)
+- Implementar **DataProvider customizado** para gestão de IDs compostos
+
+### 1.5.3 Base de Dados
+- Modelar sistema relacional completo em **MySQL 8.0**
+- Implementar **7 tabelas** com relacionamentos apropriados
+- Criar **triggers** para automatização (estado de veículos em manutenção)
+- Definir **foreign keys** com políticas CASCADE/RESTRICT
+- Implementar relação **Many-to-Many** para favoritos
+
+### 1.5.4 Infraestrutura
+- Containerizar sistema completo em **Docker**
+- Criar **3 containers** isolados e comunicantes
+- Configurar **Docker Compose** para orquestração
+- Implementar **volumes persistentes** para dados
+- Garantir **portabilidade total** do sistema
+
+## 1.6 Requisitos Funcionais de Alto Nível
+
+### Backend API
+- **RF1** – CRUD de clientes com validação de NIF
+- **RF2** – CRUD de veículos com suporte a 30 marcas
+- **RF3** – CRUD de categorias de veículos com preços
+- **RF4** – CRUD de funcionários
+- **RF5** – CRUD de reservas com controlo de estados
+- **RF6** – CRUD de manutenções com histórico
+- **RF7** – Listagem de veículos com filtros (marca, estado, categoria)
+- **RF8** – Listagem de reservas com filtros (estado, cliente, veículo)
+- **RF9** – Sistema de favoritos (relação N:N)
+  - RF9.1 – Adicionar veículo aos favoritos
+  - RF9.2 – Remover veículo dos favoritos
+  - RF9.3 – Listar favoritos de um cliente
+  - RF9.4 – Listar clientes que favoritaram um veículo
+
+### Frontend Backoffice
+- **RF10** – Dashboard com estatísticas em tempo real
+- **RF11** – Formulários com validações automáticas
+- **RF12** – Listagens com filtragem, ordenação e paginação
+- **RF13** – Visualização de relações entre entidades
+- **RF14** – Internacionalização completa em PT-PT
+- **RF15** – Gestão de favoritos com visualização bidirecional
+
+### Infraestrutura
+- **RF16** – Deploy com um único comando (docker-compose up)
+- **RF17** – Persistência de dados entre reinicializações
+- **RF18** – Healthchecks automáticos dos serviços
+- **RF19** – Logs centralizados e acessíveis
+
+## 1.7 Regras de Negócio
+
+Para garantir consistência e evitar perda de informação relevante, o sistema implementa regras de negócio rigorosas:
+
+### RN1 – Regras de Eliminação de Veículos
+Um veículo **só pode ser eliminado** se:
+- **RN1.1** – Não possuir reservas associadas, **ou**
+- **RN1.2** – Todas as reservas associadas estiverem no estado *concluída*
+
+Um veículo **não pode ser eliminado** se:
+- **RN1.3** – Possuir reservas ativas
+- **RN1.4** – Possuir reservas canceladas
+- **RN1.5** – Possuir manutenções registadas
+
+### RN2 – Regras de Eliminação de Clientes
+Um cliente **só pode ser apagado** se:
+- **RN2.1** – Não possuir qualquer reserva associada
+
+Um cliente **não pode ser eliminado** se:
+- **RN2.2** – Possuir reservas, independentemente do estado
+
+### RN3 – Regras de Eliminação de Funcionários
+Um funcionário **só pode ser apagado** se:
+- **RN3.1** – Não estiver associado a nenhuma reserva
+
+Um funcionário **não pode ser eliminado** se:
+- **RN3.2** – Participou no atendimento de pelo menos uma reserva
+
+### RN4 – Regras de Validação de Dados
+- **RN4.1** – NIF deve ter exatamente 9 dígitos
+- **RN4.2** – Email deve ter formato válido
+- **RN4.3** – Telefone deve ter formato válido (9 dígitos)
+- **RN4.4** – Matrícula deve ser única no sistema
+- **RN4.5** – Data de fim da reserva deve ser posterior à data de início
+
+### RN5 – Regras de Estado de Veículos
+- **RN5.1** – Veículo em manutenção não pode ser reservado
+- **RN5.2** – Criação de manutenção altera automaticamente estado do veículo para "Manutenção"
+- **RN5.3** – Conclusão de manutenção altera estado para "Disponível"
+
+### RN6 – Regras de Favoritos
+- **RN6.1** – Um cliente não pode favoritar o mesmo veículo duas vezes
+- **RN6.2** – Eliminação de cliente remove automaticamente seus favoritos (CASCADE)
+- **RN6.3** – Eliminação de veículo remove automaticamente das listas de favoritos (CASCADE)
+
+## 1.8 Stack Tecnológica
+
+### Backend
+- **Node.js 18** – Ambiente de execução JavaScript
+- **LoopBack 4** – Framework para APIs REST enterprise
+- **TypeScript** – Superset tipado de JavaScript
+- **MySQL Connector** – Driver oficial para MySQL
+
+### Frontend
+- **React 18** – Biblioteca para interfaces de utilizador
+- **React Admin** – Framework para dashboards administrativos
+- **Material-UI** – Biblioteca de componentes visuais
+- **i18n** – Sistema de internacionalização
+
+### Base de Dados
+- **MySQL 8.0** – Sistema de gestão de bases de dados relacionais
+- **InnoDB** – Motor de armazenamento transacional
+
+### DevOps
+- **Docker** – Plataforma de containerização
+- **Docker Compose** – Orquestração de múltiplos containers
+- **Nginx** – Servidor web de alto desempenho
+
+## 1.9 Organização do Relatório
+
+O presente relatório divide-se nos seguintes capítulos:
+
+### **Capítulo 1 – Enquadramento e Apresentação do Projeto**
+Contextualização, objetivos, requisitos, regras de negócio e stack tecnológica.
+
+### **Capítulo 2 – Arquitetura e Modelo de Dados**
+Arquitetura de três camadas, diagrama ER, explicação detalhada das tabelas, relacionamentos entre entidades e triggers implementados.
+
+### **Capítulo 3 – Implementação e Funcionalidades**
+Detalhes da implementação do backend (LoopBack 4), frontend (React Admin), endpoints, validações, tratamento de erros e funcionalidades especiais (favoritos M:N, dashboard, Docker).
+
+### **Capítulo 4 – Produto Final, Testes e Conclusões**
+Demonstração do sistema funcional, testes realizados, dificuldades encontradas, conclusões e trabalho futuro.
 
 ---
-_You can add a footer menu for navigation_ 
-< Previous | [^ Main](../../../) | [Next >](c2.md)
-:--- | :---: | ---: 
+
+## 1.10 Repositório e Documentação
+
+- **Código fonte**: [Link para repositório Git]
+- **API Explorer**: http://localhost:3000/explorer
+- **Backoffice**: http://localhost:3006
+- **Documentação OpenAPI**: http://localhost:3000/openapi.json
+
+---
+
+_Relatório do Projeto Car4Me — Desenvolvimento Web I_  
+_[Universidade] • [Ano Letivo]_
+
+---
+
+< Previous | [^ Índice](../README.md) | [Next > Capítulo 2](c2.md)
+:--- | :---: | ---:
